--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Sora:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Sora:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,7 +12,7 @@
 }
 
 @layer components {
-  .packages{
+  .packages {
     width: 330px;
     display: flex;
     flex-flow: column;
@@ -20,25 +20,26 @@
     padding: 28px;
     gap: 20px;
     background-color: white;
-    filter: drop-shadow(0 4px 3px rgba(152,152,152, 0.25));
+    filter: drop-shadow(0 4px 3px rgba(152, 152, 152, 0.25));
     border-radius: 0.75rem;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 
-    &:hover{
-      filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+    &:hover {
+      filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
+        drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
       transform: scale(1.03);
 
-      .packages-btn{
+      .packages-btn {
         /* background-color: #6366F1; */
         opacity: 100%;
       }
     }
 
-    &:first-child{
-      filter: drop-shadow(0 4px 3px rgba(151,153,255, 0.45));
-      .packages-btn{
+    &:first-child {
+      filter: drop-shadow(0 4px 3px rgba(151, 153, 255, 0.45));
+      .packages-btn {
         opacity: 100%;
-        background-color: #6366F1;
+        background-color: #6366f1;
         color: white;
         border: none;
         cursor: pointer;
@@ -49,21 +50,19 @@
       border-radius: 0.5rem;
       border-width: 2px;
       font-weight: 500;
-      color: #6366F1;
+      color: #6366f1;
       font-size: 16px;
       line-height: 1.5rem;
       height: 48px;
       opacity: 60%;
-      transition: all .2s ease;
+      transition: all 0.2s ease;
       cursor: default;
-  
+
       /* &:hover{
         background-color: #6366F1;
         border: none;
         color: white;
       } */
-
     }
-
   }
 }
